Обновлены контроллеры для использования @AuthenticationPrincipal вместо http заголовка X-User-Id
